--- a/app/src/main/res/layout/activity_incomecal.xml
+++ b/app/src/main/res/layout/activity_incomecal.xml
@@ -9,9 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="409dp"
-        android:layout_height="80dp"
-        android:background="@color/gold"
+        android:layout_width="420dp"
+        android:layout_height="82dp"
+        android:background="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,7 +24,7 @@
             android:layout_marginEnd="36dp"
             android:layout_marginRight="36dp"
             android:text="Calculate Salary"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:layout_marginTop="35dp"
-        android:text="@string/rteachername"
+        android:text="@string/rsalary_teacherID"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,13 +60,14 @@
 
     <EditText
         android:id="@+id/teacher_name"
-        android:layout_width="128dp"
+        android:layout_width="129dp"
         android:layout_height="20dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="T001"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -79,7 +80,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:layout_marginTop="16dp"
-        android:text="@string/rTeacher_sal"
+        android:text="@string/rsalary_Teacher_sal"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +106,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:layout_marginTop="16dp"
-        android:text="@string/rcompany_profit"
+        android:text="@string/rsalarycompanypayment"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +132,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:layout_marginTop="16dp"
-        android:text="@string/rteacher_netsal"
+        android:text="@string/rsalaryteacher_netsal"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +159,8 @@
         android:layout_marginLeft="92dp"
         android:layout_marginTop="12dp"
         android:text="@string/rbtn_1"
-        app:backgroundTint="@color/gold"
+        android:textColor="@color/black"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -169,19 +171,20 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:text="@string/rbtn_2"
-        app:backgroundTint="@color/gold"
+        android:textColor="@color/black"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_1"
         app:layout_constraintStart_toEndOf="@+id/btn_1" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="321dp"
-        android:layout_height="209dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="420dp"
+        android:layout_height="277dp"
+        android:layout_marginTop="76dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
         app:srcCompat="@drawable/salaryintro" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
