--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="408dp"
-        android:layout_height="85dp"
+        android:layout_width="417dp"
+        android:layout_height="76dp"
         android:background="@color/gold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,12 +27,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView19"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.8" />
 
         <ImageView
             android:id="@+id/imageView19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="48dp"
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="16dp"
@@ -44,8 +45,8 @@
 
     <ImageView
         android:id="@+id/imageView20"
-        android:layout_width="81dp"
-        android:layout_height="82dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
         android:layout_marginTop="44dp"
@@ -55,8 +56,8 @@
 
     <ImageView
         android:id="@+id/imageView21"
-        android:layout_width="81dp"
-        android:layout_height="82dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="44dp"
@@ -69,8 +70,8 @@
 
     <ImageView
         android:id="@+id/imageView22"
-        android:layout_width="81dp"
-        android:layout_height="82dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
         android:layout_marginTop="30dp"
@@ -80,11 +81,11 @@
 
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="81dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="106dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15"
         app:srcCompat="@drawable/dpaycheck" />
@@ -106,8 +107,8 @@
         android:id="@+id/textView14"
         android:layout_width="101dp"
         android:layout_height="36dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
         android:layout_marginTop="20dp"
         android:text="Student "
         android:textColor="@color/black"
@@ -132,8 +133,8 @@
 
     <ImageView
         android:id="@+id/imageView24"
-        android:layout_width="81dp"
-        android:layout_height="82dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
@@ -147,8 +148,8 @@
         android:id="@+id/textView16"
         android:layout_width="101dp"
         android:layout_height="36dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
@@ -156,7 +157,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toEndOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/imageView24" />
 
@@ -164,7 +165,7 @@
         android:id="@+id/textView17"
         android:layout_width="101dp"
         android:layout_height="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="Salary"
         android:textColor="@color/black"
         android:textSize="24sp"
