--- a/app/src/main/res/layout/activity_updateschedule.xml
+++ b/app/src/main/res/layout/activity_updateschedule.xml
@@ -10,19 +10,19 @@
 
     <TextView
         android:id="@+id/logo"
-        android:layout_width="303dp"
-        android:layout_height="53dp"
+        android:layout_width="200dp"
+        android:layout_height="41dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
         android:text="Manage Schedule"
         android:textColor="@color/black"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.129" />
 
     <EditText
         android:id="@+id/teachername"
@@ -114,7 +114,7 @@
         android:layout_marginTop="80dp"
         android:text="@string/rpbtn_3"
         android:textColor="@color/black"
-        app:backgroundTint="@color/gold"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -127,7 +127,7 @@
         android:layout_marginTop="80dp"
         android:text="@string/rpbtn_4"
         android:textColor="@color/black"
-        app:backgroundTint="@color/gold"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
 
@@ -139,7 +139,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Teacher ID"
+        android:text="Class ID"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/teachername"
@@ -155,7 +155,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Subject"
+        android:text="Teacher Name"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
@@ -210,9 +210,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="409dp"
-        android:layout_height="80dp"
-        android:background="@color/gold"
+        android:layout_width="416dp"
+        android:layout_height="82dp"
+        android:background="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -225,7 +225,7 @@
             android:layout_marginEnd="36dp"
             android:layout_marginRight="36dp"
             android:text="Schedule Management"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -257,7 +257,7 @@
         android:layout_marginRight="24dp"
         android:text="@string/rpbtn_5"
         android:textColor="@color/black"
-        app:backgroundTint="@color/gold"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/button4"
