--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wp4"
+    android:background="@drawable/wp3"
     tools:context=".aboutUs">
 
     <TextView
@@ -23,7 +23,7 @@
         android:id="@+id/stu_about_layout"
         android:layout_width="409dp"
         android:layout_height="72dp"
-        android:background="@color/design_default_color_error"
+        android:background="@color/gold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,7 +34,7 @@
             android:layout_height="46dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
-            android:background="@color/design_default_color_error"
+            android:background="@color/gold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
