--- a/app/src/main/res/layout/activity_view_and_delete_student.xml
+++ b/app/src/main/res/layout/activity_view_and_delete_student.xml
@@ -64,14 +64,16 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:text="@string/c_stu_search"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stu_view_topic" />
 
     <SearchView
         android:id="@+id/stu_view_search_view"
         android:layout_width="409dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="32dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
