--- a/app/src/main/res/layout/activity_hall_main_sign.xml
+++ b/app/src/main/res/layout/activity_hall_main_sign.xml
@@ -44,11 +44,11 @@
         android:textStyle="bold"
         app:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintEnd_toStartOf="@+id/button14"
+        app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.758" />
+        app:layout_constraintVertical_bias="0.756" />
 
     <Button
         android:id="@+id/button14"
