--- a/app/src/main/res/layout/activity_updateschedule.xml
+++ b/app/src/main/res/layout/activity_updateschedule.xml
@@ -25,7 +25,22 @@
         app:layout_constraintVertical_bias="0.129" />
 
     <EditText
-        android:id="@+id/teachername"
+        android:id="@+id/id"
+        android:layout_width="202dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+    <EditText
+        android:id="@+id/ClassId"
         android:layout_width="202dp"
         android:layout_height="37dp"
         android:layout_marginStart="2dp"
@@ -37,12 +52,13 @@
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/id" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/teachername"
         android:layout_width="202dp"
         android:layout_height="37dp"
         android:layout_marginTop="24dp"
@@ -52,45 +68,31 @@
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/ClassId"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/ClassId"
+        app:layout_constraintTop_toBottomOf="@+id/ClassId" />
+
+    <EditText
+        android:id="@+id/classday"
+        android:layout_width="202dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/teachername"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/teachername"
         app:layout_constraintTop_toBottomOf="@+id/teachername" />
 
     <EditText
-        android:id="@+id/editTextNumber"
-        android:layout_width="202dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <EditText
-        android:id="@+id/editTextNumber2"
-        android:layout_width="202dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/duration"
         android:layout_width="202dp"
         android:layout_height="37dp"
         android:layout_marginTop="16dp"
@@ -100,18 +102,36 @@
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/classday"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
+        app:layout_constraintStart_toStartOf="@+id/classday"
+        app:layout_constraintTop_toBottomOf="@+id/classday" />
+
+    <EditText
+        android:id="@+id/startingtime"
+        android:layout_width="202dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/duration"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/duration"
+        app:layout_constraintTop_toBottomOf="@+id/duration" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnadd"
         android:layout_width="98dp"
         android:layout_height="52dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="60dp"
         android:text="@string/rpbtn_3"
         android:textColor="@color/black"
         app:backgroundTint="@color/lightgreen"
@@ -119,17 +139,33 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnview"
         android:layout_width="98dp"
         android:layout_height="52dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="60dp"
         android:text="@string/rpbtn_4"
         android:textColor="@color/black"
         app:backgroundTint="@color/lightgreen"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintStart_toEndOf="@+id/btnadd"
+        app:layout_constraintTop_toBottomOf="@+id/startingtime" />
+
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="139dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Id"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id"
+        app:layout_constraintEnd_toStartOf="@+id/id"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -142,8 +178,8 @@
         android:text="Class ID"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/teachername"
-        app:layout_constraintEnd_toStartOf="@+id/teachername"
+        app:layout_constraintBaseline_toBaselineOf="@+id/ClassId"
+        app:layout_constraintEnd_toStartOf="@+id/ClassId"
         app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -158,8 +194,8 @@
         android:text="Teacher Name"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/teachername"
+        app:layout_constraintEnd_toStartOf="@+id/teachername"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -174,8 +210,8 @@
         android:text="Class Day"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumber"
-        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
+        app:layout_constraintBaseline_toBaselineOf="@+id/classday"
+        app:layout_constraintEnd_toStartOf="@+id/classday"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -189,8 +225,8 @@
         android:text="Duration"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumber2"
-        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
+        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
+        app:layout_constraintEnd_toStartOf="@+id/duration"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -204,8 +240,8 @@
         android:text="Starting Time"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName4"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/startingtime"
+        app:layout_constraintEnd_toStartOf="@+id/startingtime"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -247,12 +283,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnback"
         android:layout_width="98dp"
         android:layout_height="52dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:text="@string/rpbtn_5"
@@ -260,6 +296,10 @@
         app:backgroundTint="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintStart_toEndOf="@+id/btnview"
+        app:layout_constraintTop_toBottomOf="@+id/startingtime" />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
